--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ body div{
 }
 .container{
     height: 2400px;
-    /* width: 960px; */
+    width: 960px;
     display: grid;
     grid-template-columns: 15% 70% 15%;
     grid-template-rows: 15% 12% 12% 12% 12% 12% 12% 12% 12% 12% 12% 12% 12% 12% 12% 12% 10%;
