--- a/style.css
+++ b/style.css
@@ -1,132 +1,15 @@
 body{
-    height: 100vh;
-    width: 100%;
-    /* background-color: yellow; */
-}
-body div{
-    /* background-size:contain; */
-    /* background-position: center; */
-    
-    /* width: 100%; */
-    /* height: 300px; */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 0px;
 }
 .container{
-    height: 2400px;
     width: 960px;
-    display: grid;
-    grid-template-columns: 15% 70% 15%;
-    grid-template-rows: 15% 12% 12% 12% 12% 12% 12% 12% 12% 12% 12% 12% 12% 12% 12% 12% 10%;
 }
-.item{
-    /* border: 1px dashed grey; */
-    background-repeat: no-repeat;
-    background-size: 100% 100%;
-    height: 100%;
+.container img{
+    max-width: 100%
 }
-.header{
-    background-image: url('assets/Group\ 1.png');
-    /* background-size: contain; */
-    /* background-size: 100%; */
-    grid-row: 1 / 2;
-    grid-column: 1 / 4;
+iframe{
+    width: 960px;
 }
-.blurb{
-    background-image: url('assets/Group\ 2.png');
-    grid-row: 2 / 3;
-    grid-column: 2 / 3
-}
-.date{
-    background-image: url('assets/Group\ 3.png');
-    grid-row: 3 / 4;
-    grid-column: 2 / 3
-}
-.time{
-    background-image: url('assets/Group\ 4.png');
-    grid-row: 4 / 5;
-    grid-column: 2 / 3
-}
-.location{
-    background-image: url('assets/Group\ 5.png');
-    grid-row: 5 / 6;
-    grid-column: 2 / 3
-}
-.map{
-    grid-column: 2 / 3;
-    grid-row: 6 / 8;
-}
-.map iframe{
-    height: 100%;
-    width: 100%;
-}
-.lodging{
-    display: grid;
-    grid-row: 8 / 12;
-    grid-column: 2 / 3
-}
-.lodging div{
-    width: 100%;
-}
-.camping1{
-    background-image: url('assets/Group\ 6.png'); 
-    grid-row: 1/ 5;
-}
-.camping2{
-    background-image: url('assets/Group\ 7.png'); 
-    grid-row: 5 / 6;
-}
-.bnb1{
-    grid-row: 6/9;
-    background-image: url('assets/Group\ 8.png'); 
-}
-.bnb2{
-    grid-row: 9/10;
-    background-image: url('assets/Group\ 9.png'); 
-}
-.bnb3{
-    grid-row: 10/11;
-    background-image: url('assets/Group\ 10.png'); 
-}
-.sundre-hotels{
-    grid-row: 12/13;
-    background-image: url('assets/Group\ 11.png'); 
-}
-.sundre-sublink{
-    grid-row: 13/14;
-    background-image: url('assets/Group\ 12.png'); 
-}
-.rsvp-container{
-    grid-row: 12 / 13;
-    grid-column: 2 / 3;
-    display: grid;
-}
-.rsvp-main{
-    background-image: url('assets/Group\ 13.png');
-    grid-row: 1 / 5;
-}
-.rsvp-link{
-    background-image: url('assets/Group\ 14.png');
-    grid-row: 5/7;
-}
-.housekeeping-container{
-    grid-row: 13/17;
-    grid-column: 2 / 3;
-    display: grid;
-}
-.housekeeping-main{
-    grid-row: 1 /9;
-    background-image: url('assets/Group\ 15.png');
-}
-.housekeeping-link{
-    grid-row: 9/10;
-    background-image: url('assets/Group\ 16.png');
-}
-/* .housekeeping{
-    background-image: url('assets/Group\ 8.png');
-    grid-row: 10 / 11;
-    grid-column: 2 / 3
-}
-.footer{
-    background-image: url('assets/Group\ 9.png');
-    grid-row: 11 / 12;
-    grid-column: 1 / 4
-}  */
